samples/_failures_safe/1761221625_ed207d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4b4fd12.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_d4b4fd12.c:165:16: error: missing terminating " character
  165 |         printf("Token %zu: %
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d4b4fd12.c:165:9: error: expected expression at end of input
  165 |         printf("Token %zu: %
      |         ^~~~~~
./samples/SAFE/__tmp_d4b4fd12.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4b4fd12.c:165:9: error: expected declaration or statement at end of input
